--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "fast-csv": "^2.5.0",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.0",
     "mongoose": "^5.3.12",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "multer": "^1.4.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
